--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p class="name">Your Name</p>
             </div>
             <div class="downPart">
-                <a href="" class="link">Audiomack</a>
+                <a href="https://audiomack.com/lilqlinton-888/album/this-that-888?share-user-id=27032990" class="link">Audiomack</a>
 
                 <a href="" class="link">Twitter</a>
 
@@ -25,7 +25,7 @@
 
                 <a href="" class="link">Boomplay</a>
 
-                <a href="" class="link">Tiktok</a> 
+                <a href="https://vm.tiktok.com/ZMrYR3PXo/" class="link">Tiktok</a> 
                 <form>
                     <a href="mailto: name@email.com" class="contact">contact directly</a>
                 </form>
