--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
             <div class="topPart">
                 <h1>Lilqlinton</h1>
                 <img src="Screenshot_20240614-115115~2.jpg" alt="" class="profileImg">
-                <p class="name">Your Name</p>
+                <p class="name">Fatuase Clinton ayomide</p>
             </div>
             <div class="downPart">
-                <a href="https://audiomack.com/lilqlinton-888/album/this-that-888?share-user-id=27032990" class="link">Audiomack</a>
+                <a href="https://audiomack.com/lilqlinton-888" class="link">Audiomack</a>
 
-                <a href="" class="link">Twitter</a>
+                <a href="https://x.com/lilqlinton47200?s=09" class="link">Twitter</a>
 
-                <a href="" class="link">Facebook</a>
+                <a href="https://www.facebook.com/Qlinton888" class="link">Facebook</a>
 
-                <a href="" class="link">Boomplay</a>
+                
 
                 <a href="https://vm.tiktok.com/ZMrYR3PXo/" class="link">Tiktok</a> 
                 <form>
-                    <a href="mailto: name@email.com" class="contact">contact directly</a>
+                    <a href="mailto: Fatuaseclinton@gmail.com" class="contact">contact directly</a>
                 </form>
             </div>
            
